--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -166,7 +166,7 @@
         </div>
         <div id="crop-image-preview" class="crop-image-div">
             <div class="row">
-                <span class="close-crop-image fa fa-close right"></span>
+                <span class="close-crop-image material-icons right">remove</span>
             </div>
             <div class="row">
                 <div class="col s12">
