--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -30,7 +30,7 @@
                  data-id="" hidden>
                 <div class="row">
                     <div class="col s12 title-page-wrapper">
-                        <h4><i class="fa fa-quote-right" aria-hidden="true"></i> Citar publicacion</h4>
+                        <h4><i class="material-icons" aria-hidden="true">format_quote</i> Citar publicacion</h4>
                         <h6>Comparte esta publicación con tus seguidores</h6>
                     </div>
                 </div>
