--- a/skyfolk/templates/account/relations_page.html
+++ b/skyfolk/templates/account/relations_page.html
@@ -11,7 +11,7 @@
                         {% else %}
                             <img class="back-profile-user lazyload" data-src="{{ STATIC_URL }}img/nuevo_back.png">
                         {% endif %}
-                        <i class="fa fa-user fa-2x like-him">
+                        <i class="material-icons like-him">person</i>
                         </i>
                         <div class="bg-user">
                             <div onclick="location.href='/profile/{{ item.username }}'"
