--- a/skyfolk/templates/account/signup.html
+++ b/skyfolk/templates/account/signup.html
@@ -38,7 +38,7 @@
     <div class="row">
         <div class="block-form block-formregister">
             <a class="reco-passwd" title="Consejos para una buena contraseña." href="/tips/password/"><i
-                    class="fa fa-lock"></i></a>
+                    class="material-icons">lock</i></a>
             <form class="signup form-3" id="signup_form" method="post"
                   action="{% url 'account_signup' %}">{% csrf_token %}
                 <div class="form-group">
