--- a/skyfolk/templates/account/tab-comentarios.html
+++ b/skyfolk/templates/account/tab-comentarios.html
@@ -6,7 +6,7 @@
         <div class="no-comments" id="without-comments">
             <span class="no-comments-text-info">¡{{ user_profile.username }} no tiene comentarios!</span>
             <a id="compose-new-no-comments" class="no-comments-new-comment">
-                <i class="fa fa-paper-plane fa-lg"></i>
+                <i class="material-icons">send</i>
             </a>
         </div>
     {% endif %}
