--- a/skyfolk/templates/groups/followers_page.html
+++ b/skyfolk/templates/groups/followers_page.html
@@ -12,8 +12,7 @@
                         {% else %}
                             <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
                         {% endif %}
-                        <i class="fa fa-user fa-2x like-him">
-                        </i>
+                        <i class="material-icons like-him">person</i>
                         <div class="bg-user">
                             <div onclick="location.href='/profile/{{ item.username }}'"
                                  class="profile-user-bg">{% avatar item.username %}</div>
@@ -49,8 +48,7 @@
                         {% else %}
                             <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
                         {% endif %}
-                        <i class="fa fa-user fa-2x like-him">
-                        </i>
+                        <i class="material-icons like-him">person</i>
                         <div class="bg-user">
                             <div onclick="location.href='/profile/{{ item.username }}'"
                                  class="profile-user-bg">{% avatar item.username %}</div>
