--- a/skyfolk/templates/groups/group_profile.html
+++ b/skyfolk/templates/groups/group_profile.html
@@ -43,7 +43,7 @@
                             class="material-icons right">close</i></button>
                     <div class="file-field">
                         <div class="btn blue lighten-2">
-                            <span><i class="fa fa-camera" aria-hidden="true"></i></span>
+                            <span><i class="material-icons md-24">photo_camera</i></span>
                             <input name="image" type="file" multiple>
                         </div>
                         <div class="file-path-wrapper">
@@ -70,9 +70,8 @@
                     <div id="div-separator">
                         <div class="sidebar card" id="tab-container">
                             <div class="ventana-pin">
-                                <a><i class="fa fa-times"></i></a>
-                                <a><i class="fa fa-expand"></i></a>
-                                <a><i class="fa fa-thumb-tack"></i></a>
+                                <a><i class="material-icons">remove</i></a>
+                                <a><i class="material-icons">flip_to_front</i></a>
                             </div>
                             <ul class="unstyled table fullwidth links">
                                 <li class="tab" id="li-tab-comentarios"><a
@@ -89,7 +88,7 @@
                                     <div class="no-comments" id="without-comments">
                                         <span class="no-comments-text-info">¡{{ group_profile.name }} no tiene comentarios!</span>
                                         <a id="compose-new-no-comments" class="no-comments-new-comment">
-                                            <i class="fa fa-paper-plane fa-lg"></i>
+                                            <i class="material-icons">send</i>
                                         </a>
                                     </div>
                                     {% endif %}
