--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -32,7 +32,17 @@
             {% endcomment %}
             <div class="row">
                 <div id="recommendation-user">
-                    <i class="fa fa-lg fa-spinner fa-spin"></i><br><br>
+                      <div class="preloader-wrapper small active">
+                        <div class="spinner-layer spinner-blue">
+                      <div class="circle-clipper left">
+                        <div class="circle"></div>
+                      </div><div class="gap-patch">
+                        <div class="circle"></div>
+                      </div><div class="circle-clipper right">
+                        <div class="circle"></div>
+                      </div>
+                    </div>
+                    </div>
                     <script>
                         window.follows = {{ follows }};
                     </script>
@@ -64,7 +74,7 @@
                         </div>
                         <div class="col l9 m9 s8 author">
                             <span><a href="/profile/{{ item.author.username }}">@{{ item.author.username }}</a><i>{{ item.author.first_name }} {{ item.author.last_name }}</i><span>
-                                    <span><a href="/publication/{{item.id}}" title="Ver publicación"><i class="fa fa-plus-square-o right" aria-hidden="true"></i></a></span>
+                                    <span><a href="/publication/{{item.id}}" title="Ver publicación"><i class="material-icons md-18 right">open_in_new</i></a></span>
                                     <p><i class="pub-date">{{ item.created|naturaltime }}</i></p>
                                 </div>
                                 <div class="col l9 m10 s9 contenido">
@@ -285,8 +295,7 @@
                                     <div class="col l8 m8 s8 legend-user-data">
                                         <a href="/profile/{{ item.owner }}">@{{ item.owner }}</a>
                                         <i class="photo-title truncate">{{ item.title }}</i>
-                                        <i class="truncate photo-date"><i class="fa fa-clock-o"
-                                                aria-hidden="true"></i> {{ item.date_added|naturaltime }}</i>
+                                        <i class="truncate photo-date"><i class="material-icons md-18">access_time</i> {{ item.date_added|naturaltime }}</i>
                                     </div>
                                 </div>
                             </div>
