--- a/skyfolk/templates/account/verification_sent.html
+++ b/skyfolk/templates/account/verification_sent.html
@@ -47,7 +47,7 @@
                 <h6 class="ch"> {% trans "Verify Your E-mail Address" %} </h6>
             </div>
             <div class="col l12 s12 m12 email-info">
-                <h1><i class="fa fa-envelope-o" aria-hidden="true"></i> {% trans "Verify Your E-mail Address" %}</h1>
+                <h1><i class="material-icons">mail</i> {% trans "Verify Your E-mail Address" %}</h1>
                 <br><br>
                 <p class="information-text">
                     {% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize
