--- a/skyfolk/templates/channels/new_feed_publication.html
+++ b/skyfolk/templates/channels/new_feed_publication.html
@@ -10,7 +10,7 @@
         </div>
         <div class="col l9 m9 s8 author">
             <span><a href="/profile/{{ item.author.username }}">@{{ item.author.username }}</a><i>{{ item.author.first_name }} {{ item.author.last_name }}</i><span>
-                <span><a href="/publication/{{item.id}}" title="Ver publicación"><i class="fa fa-plus-square-o right" aria-hidden="true"></i></a></span>
+                <span><a href="/publication/{{item.id}}" title="Ver publicación"><i class="material-icons md-18 right">open_in_new</i></a></span>
                 <p><i class="pub-date">{{ item.created|naturaltime }}</i></p>
             </div>
             <div class="col l9 m10 s9 contenido">
