--- a/skyfolk/templates/channels/new_notification.html
+++ b/skyfolk/templates/channels/new_notification.html
@@ -2,8 +2,8 @@
 {% load avatar_tags %}
 
 <li class="collection-item avatar" data-id="{{ notification.id }}">
-    <a onclick="AJAX_mark_read(this)" class="fa fa-remove"
-    data-notification="{{ notification.slug }}"></a>
+    <a onclick="AJAX_mark_read(this)" class="remove-notification material-icons"
+    data-notification="{{ notification.slug }}">remove</a>
     <div class="circle">
         {% avatar notification.actor %}
     </div>
