--- a/skyfolk/templates/groups/comentarios_entries.html
+++ b/skyfolk/templates/groups/comentarios_entries.html
@@ -1,6 +1,7 @@
 {% load avatar_tags %}
 {% load humanize %}
 {% load embed_video_tags %}
+{% load app_filters %}
 
 {% for node in publications %}
     <div class="row" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
@@ -10,15 +11,14 @@
                     <div class="box">
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
                   data-delay="50"
-                  data-tooltip="Ver conversación completa"><i class="fa fa-plus-square-o" aria-hidden="true"></i></span>
+                  data-tooltip="Ver conversación completa"><i class="material-icons md-18">open_in_new</i></span>
                         {% if user.id == node.author.id %}
                             {% if node.event_type == 1 or node.event_type == 3 %}
-                                <span data-id="{{ node.pk }}"
+                               <span data-id="{{ node.pk }}"
                                       class="top-options edit-comment tooltipped"
                                       data-position="bottom"
                                       data-delay="50"
-                                      data-tooltip="Editar comentario"><i class="fa fa-pencil"
-                                                                          aria-hidden="true"></i></span>
+                                      data-tooltip="Editar comentario"><i class="material-icons md-18">mode_edit</i></span>
                             {% endif %}
                         {% endif %}
                         <div class="row">
@@ -35,7 +35,7 @@
                                             {% if node.parent %}
                                                 <span class="chip">
                                                         {% avatar node.parent.author %}
-                                                        <i class="fa fa-reply"></i> <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}</a>
+                                                        <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}</a>
                                                 </span>
                                             {% endif %}
                                         </h2>
@@ -244,29 +244,31 @@
                             <!-- OPCIONES DE COMENTARIOS -->
                             <div class="options_comentarios" data-id="{{ node.id }}" data-board="{{ node.board_group.id }}">
                                 <ul class="opciones">
-                                    {% if enable_control_pubs_btn or user.id == node.author.id %}
+                                    {% if user.id == node.author.id or user.id == user_profile.id %}
                                         {% comment %} Si estamos visitando un perfil que no es el nuestro {% endcomment %}
-                                        <li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i>
+                                        <li class="trash-comment" title="Borrar comentario"><i class="material-icons md-18">delete_forever</i>
                                         </li>
                                     {% endif %}
                                         {% comment %} Si el usuario esta logueado {% endcomment %}
                                         {% with node.user_give_me_hate.all as hates %}
                                         <li title="No me gusta" class="hate-comment" {% if user in hates %} style="color: rgb(186, 104, 200);"{% endif %}>
-                                            <i class="fa fa-angle-down" aria-hidden="true"></i>
-                                            <i class="fa hate-value">{% if hates|length > 0 %} {{ hates|length|intword }}{% endif %}</i>
+                                            <i class="material-icons md-18">keyboard_arrow_down</i>
+                                            <i class="hate-value">{% if hates|length > 0 %} {{ hates|length|intword }}{% endif %}</i>
                                         </li>
                                         {% endwith %}
                                         {% with node.user_give_me_like.all as likes %}
                                         <li title="¡Me gusta!" class="like-comment" {% if user in likes %}style="color: rgb(240, 98, 146);"{% endif %}>
-                                            <i class="fa fa-angle-up" aria-hidden="true"></i>
-                                            <i class="fa like-value">{% if likes|length > 0 %} {{ likes|length|intword }}{% endif %}</i>
+                                            <i class="material-icons md-18">keyboard_arrow_up</i>
+                                            <i class="like-value">{% if likes|length > 0 %} {{ likes|length|intword }}{% endif %}</i>
                                         </li>
                                         {% endwith %}
-                                        <li title="Añadir a mi skyline" id="share-{{node.pk}}" data-id="{{ node.pk }}" class="add-timeline"
-                                        ><i
-                                        class="fa fa-quote-right" aria-hidden="true"> </i></li>
-                                    <li title="Responder" class="reply-comment"><i class="fa fa-reply"
-                                                                                   id="reply-caja-comentario-{{ node.pk }}"></i>
+                                        <li id="share-{{node.pk}}" data-id="{{ node.pk }}" class={% if node.id in pubs_shared_with_me %}"remove-timeline" title="Eliminar de mi skyline" {% else %}"add-timeline" title="Añadir a mi skyline" {% endif %}
+                                        >
+                                        <i class="material-icons md-18">format_quote</i>
+                                        <i class="share-values"> </i>
+                                        </li>
+                                    <li title="Responder" class="reply-comment" id="reply-caja-comentario-{{ node.pk }}">
+                                    <i class="material-icons md-18">reply</i>
                                     </li>
                                 </ul>
                             </div>
