--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -1020,24 +1020,16 @@ ul.table > li
 .trofeos
   position: absolute
   z-index: 9999
-  left: 0
-  right: 0
-  margin-right: auto
-  margin-left: auto
   background-color: #fafafa
   top: 10%
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5)
   display: none
+  min-height: 380px
 
-.trofeos .trofeo-user
-  height: 90px
-  display: inline-block
-  border-radius: 100%
-  background-color: transparent
-  border: 5px solid #1e88e5
-  margin-left: 50px
-  margin-top: 15px
-
+.trofeos .user-award
+  padding: 10px
+  
+  
 .trofeos .trofeos-title
   text-align: center
   color: #212121
@@ -1047,21 +1039,6 @@ ul.table > li
   margin: 10px auto
   border-bottom: 1px solid #212121
   width: 80%
-
-.trofeos .wrapper-trofeos
-  position: relative
-  width: 85%
-  margin: auto auto auto 7%
-  height: 570px
-
-.trofeos img
-  width: 60px
-  height: 60px
-  border-radius: 100%
-  margin-left: -5px
-  -webkit-box-shadow: inset 0.2px 0.2px 18px 1px rgba(178, 223, 219, 1)
-  -moz-box-shadow: inset 0.2px 0.2px 18px 1px rgba(178, 223, 219, 1)
-  box-shadow: inset 0.2px 0.2px 18px 1px rgba(178, 223, 219, 1)
 
 /* GRUPOS */
 .grupos
