--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -1040,18 +1040,19 @@ ul.table > li
   border-bottom: 1px solid #212121
   width: 80%
 
+.trofeos img
+  max-width: 100%
+  max-height: 100%
+  
 /* GRUPOS */
 .grupos
   position: absolute
   z-index: 9999
-  left: 0
-  right: 0
-  margin-right: auto
-  margin-left: auto
   background-color: #fafafa
   top: 10%
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5)
   display: none
+  min-height: 380px
 
 .grupos .grupos-title
   text-align: center
@@ -1063,45 +1064,9 @@ ul.table > li
   border-bottom: 1px solid #212121
   width: 80%
 
-.grupos .grupo-user
-  display: inline-block
-  background-color: #000
-  height: 160px
-  margin-left: 43px
-  margin-top: 20px
-  margin-bottom: 20px
-
 .grupos img
-  width: 100%
-  height: 100%
-
-.grupos .text-description
-  position: relative
-  top: -90%
-  font-size: 1.4em
-  color: #fff
-  font-weight: 400
-  margin-left: 7px
-
-.grupos .fa-users
-  position: relative
-  margin-top: -30px
-  float: left
-  margin-left: 7px
-  color: #fff
-
-.grupos .fa-heart
-  position: relative
-  margin-top: -30px
-  float: right
-  margin-right: 7px
-  color: #fff
-
-.grupos .fa-users:hover
-  color: #1e88e5
-
-.grupos .fa-heart:hover
-  color: #ec407a
+  max-width: 100%
+  max-height: 100%
 
 /*Fin informacion perfil */
 
