--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -90,8 +90,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                 </div>
             </div>
         </div>
-        <!-- INFORMACION ADICIONAL DEL USUARIO -->
-        <div class="col s12"></div> <!-- separate div -->
+        <div class="col s12"></div>
         <div class="col s10 m10 l3 info-paw" id="personal-card-info">
             <div class="info-nav default-div">
                 <div class="info-wrapper-pic">
@@ -110,7 +109,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                     {% if user.username != user_profile.username %}
                     <li id="bloq-user"><i class="material-icons" aria-hidden="true">block</i></li>
                     {% endif %}
-                    <li class="info-groups" title="Grupos de {{ user_profile.username }}"><i class="material-icons">group</i>
+                    <li class="info-groups" title="Grupos de {{ user_profile.username }}" data-id="{{ user_profile.id }}"><i class="material-icons">group</i>
                     </li>
                     <li class="info-trof" title="Logros de {{ user_profile.username }}" data-id="{{ user_profile.id }}"><i class="material-icons">save</i>
                     </li>
@@ -120,25 +119,23 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                 </ul>
             </div>
         </div>
-        <!-- Trofeos -->
         <div class="col s12 m12 l10 offset-l1 trofeos">
-            <span id="close-trofeos" class="material-icons right">remove</span>
             <div class="row">
-               <h3 class="trofeos-title">Logros de {{ user_profile.username }}</h3>
+                <span id="close-trofeos" class="material-icons right">remove</span>
+                <h3 class="trofeos-title">Logros de {{ user_profile.username }}</h3>
             </div>
             <div class="row">
                 <div class="col l12 m12 s12 wrapper-trofeos">
                 </div>
             </div>
         </div>
-        <!-- Grupos -->
-        <div class="col-lg-10 col-md-12 col-sm-12 grupos">
-            <span id="close-grupos" class="material-icons right">remove</span>
-            <h3 class="grupos-title">Grupos de {{ user_profile.username }}</h3>
-            <div class="col-lg-12 col-md-12 col-sm-12 wrapper-grupos">
-                <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
-                    <img src="{{ STATIC_URL }}dist/img/nuevo.png" alt="img-group">
-                    <span class="text-description">Nombre del grupo</span>
+        <div class="col s12 m12 l10 offset-l1 grupos">
+            <div class="row">
+                <span id="close-grupos" class="material-icons right">remove</span>
+                <h3 class="grupos-title">Grupos de {{ user_profile.username }}</h3>
+            </div>
+            <div class="row">
+                <div class="col l12 m12 s12 wrapper-groups">
                 </div>
             </div>
         </div>
