--- a/skyfolk/templates/badgify/badge_detail.html
+++ b/skyfolk/templates/badgify/badge_detail.html
@@ -1,3 +1,4 @@
+{% comment %}
 {% extends "base.html" %}
 
 {% block title %}
@@ -29,3 +30,4 @@
 </ul>
 {% endif %}
 {% endblock %}
+{% endcomment %}
