--- a/skyfolk/templates/badgify/badge_list.html
+++ b/skyfolk/templates/badgify/badge_list.html
@@ -1,3 +1,4 @@
+{% comment %}
 {% extends "base.html" %}
 
 {% block title %}Badges{% endblock %}
@@ -34,3 +35,4 @@
 {% endif %}
     {% endif %}
 {% endblock %}
+{% endcomment %}
